<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Header"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="142dp"
        android:layout_height="33dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="176dp"
        android:text="@string/BTN3"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelephoneNumber"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/AlreadyMember"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/rectangle_roundcorner"
        android:backgroundTint="#FBFAFA"
        android:ems="10"
        android:hint=" Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/Name"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/rectangle_roundcorner"
        android:backgroundTint="#FBFAFA"
        android:hint=" Email"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="153dp"
        android:background="@drawable/rectangle_roundcorner"
        android:backgroundTint="#FBFAFA"
        android:hint=" Address"
        android:text="@string/Address"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etTelephoneNumber"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/rectangle_roundcorner"
        android:backgroundTint="#FBFAFA"
        android:hint=" Telephone Number"
        android:text="@string/Telephone"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectangle_roundcorner"
        android:backgroundTint="#FBFAFA"
        android:hint=" Password"
        android:text="@string/Password"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>